argo/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: asana-adapter
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://gitlab.com/rhi-demo/asana-adapter.git'
  labels:
    app: asana-adapter
    demo: rhi-demo
    app.kubernetes.io/component: asana-adapter
    app.kubernetes.io/instance: asana-adapter
    app.kubernetes.io/name: asana-adapter
    app.kubernetes.io/part-of: asana-adapter
    app.openshift.io/runtime: camel
    app.openshift.io/runtime-version: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asana-adapter
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
        prometheus.io/path: "/q/metrics"
      labels:
        app: asana-adapter
        demo: rhi-demo
        deploymentconfig: asana-adapter
        version: v1
    spec:
      containers:
        - resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "200m"
          terminationMessagePath: /dev/termination-log
          name: asana-adapter
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: quay.io/gcamposo/asana-adapter:1.0.6
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 20
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
