argo/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: asana-adapter
  name: asana-adapter
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: asana-adapter
