argo/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: asana-adapter
  name: asana-adapter
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: asana-adapter
    weight: 100
